TD width in precentage doesn't work. https://bugs.webkit.org/show_bug.cgi?id=34758

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/table/colspan-with-all-percent-cells.html

* rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::calcEffectiveLogicalWidth):
In the case where all our columns have percent lengths, split the colspan
logical width using the percentages from the lengths. This should be properly
handled by the massive 'else' case but it is not and I did not feel like refactor
that due to massive compatibility issues that would arise.

LayoutTests:

* fast/table/colspan-with-all-percent-cells-expected.png: Added.
* fast/table/colspan-with-all-percent-cells-expected.txt: Added.
* fast/table/colspan-with-all-percent-cells.html: Added.
* platform/chromium-cg-mac/tables/mozilla/bugs/bug14929-expected.png:
* platform/chromium-linux/fast/table/027-expected.png:
* platform/chromium-linux/fast/table/027-vertical-expected.png:
* platform/chromium-mac/fast/table/027-vertical-expected.png:
* platform/chromium-mac/tables/mozilla/bugs/bug14929-expected.png:
* platform/chromium-mac/tables/mozilla/bugs/bug2947-expected.png:
* platform/chromium-win/fast/table/027-expected.txt:
* platform/chromium-win/fast/table/027-vertical-expected.txt:
* platform/mac/fast/table/027-expected.png:
* platform/mac/fast/table/027-expected.txt:
* platform/mac/fast/table/027-vertical-expected.png:
* platform/mac/fast/table/027-vertical-expected.txt:
* platform/mac/tables/mozilla/bugs/bug14929-expected.txt:
* platform/mac/tables/mozilla/bugs/bug2947-expected.png:
* platform/mac/tables/mozilla/bugs/bug2947-expected.txt:
Those changes are just rebaselines which now matches Firefox Nighly
more closely (thus progressions).

* platform/chromium/test_expectations.txt: Skipped Windows that needs a new baseline.
* platform/efl/Skipped:
* platform/gtk/Skipped:
* platform/qt/Skipped:
Skipped the previous tests as they need a rebaseline on those platforms.


Canonical link: https://commits.webkit.org/90495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102040 268f45cc-cd09-0410-ab3c-d52691b4dbfc